--- a/_posts/2019-07-07-the-us-narrative-today.html
+++ b/_posts/2019-07-07-the-us-narrative-today.html
@@ -2533,107 +2533,107 @@ stories:
   domain: http://www.princetoninfo.com/
   link: https://princetoninfo.com/lessons-for-trenton-from-philadelphia/
 images:
-- name: crow-crow-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-gan-vogh.jpg
-- name: status-berlin-status-berlin-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dark-rain.jpg
-- name: fence-fence-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-light-dali.jpg
-- name: amusement-park-amusement-park-2-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-constitution.jpg
-- name: christianity-christianity-under-construction-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-alien-goggles.jpg
-- name: miamibeach-miamibeach-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-far-away.jpg
-- name: aws-s3-square-supreme-court-judgement.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-supreme-court-judgement.jpg
-- name: abe-lincoln-one-yellow-paper-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-yellow-paper-file-00-00-00-00.jpg
-- name: school-clouds-church-clouds-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-satan-red.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-internet-numbers.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-internet-numbers.png
+- name: copper-circuit-IMG_1184.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_1184.jpg
+- name: flower-barbed-wire-flower-barbed-wire-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-emily-carr.jpg
+- name: window-window-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-ww2-color.jpg
+- name: border-crossing-bordercrossing-marcel-duchamp.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-marcel-duchamp.png
+- name: downtown-fredericksburg-downtown-fredericksburg-alien-goggles.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-alien-goggles.JPG
+- name: nyc-flag-api-conversations.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit.jpg
+- name: oldtrain-oldtrain-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-blue-circuit.jpg
+- name: downtown-la-dark-dali.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la-dark-dali.JPG
+- name: razorwire-DSC-0080-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-atari-asteroids.jpg
+- name: trucksilo-trucksilo-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-atari-asteroids.jpg
+- name: beach-rocks-beach-rocks-currents-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-post-modern.jpg
+- name: yosemite-yosemite-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-sand-paper.jpg
+- name: oldhousecars-house-old-cars-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-wols.jpg
+- name: lincoln-memorial-lincolnmemorial-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-purple-pond.jpg
+- name: window-window-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-bright-sand.jpg
+- name: scream-DSC_0115.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0115.jpg
+- name: old-church-oldchurch-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dali-two.jpg
+- name: cargo-ship-cargo-ship-on-sea-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-clean-view.jpg
+- name: amusement-park-amusement-park-2-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-atari-asteroids.jpg
+- name: razorwire-DSC-0080-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-rainbow-festival.jpg
+- name: beach-rocks-beach-rocks-currents-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-propaganda-leaflets.jpg
+- name: gears-4882162452-fa3126b38d-b-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-smooth-ride.jpg
+- name: eduardo-eduardo-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-smoking-cigarette.jpg
+- name: fence-fence-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-pablo-blue.jpg
+- name: store-on-corner-oldcabin-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-blue-brush.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-atari-asteroids.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-atari-asteroids.JPG
+- name: sand-hand-sand-hand-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-graham-sutherland.jpg
+- name: server-cloud-server-racks-clouds-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-gan-vogh.jpg
+- name: locked-up-steam-lock-up-steam-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-yellow-collage.jpg
+- name: old-church-oldchurch-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-constitution.jpg
+- name: windowmountain-window-mountain-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-blue-circuit.jpg
+- name: store-on-corner-store-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-atari-asteroids.jpg
+- name: rockingchair-face-2-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-crafty-painting.jpg
+- name: aws-s3-square-status-berlin-propaganda-leaflets-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-status-berlin-propaganda-leaflets-square.jpg
+- name: subway-subway-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-internet-numbers.jpg
+- name: art-museum-art-museum-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-colorful-blocks.jpg
+- name: curtain-curtain-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dark-soul.jpg
+- name: cargo-ship-cargo-ship-on-sea-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-bright-sand.jpg
+- name: trucksilo-trucksilo-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-kand-two.jpg
+- name: subway-subway-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-crafty-painting.jpg
+- name: razorwire-DSC-0080-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-space-pizza.jpg
+- name: beach-rocks-beach-rocks-currents-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-graham-sutherland.jpg
+- name: amusement-park-amusement-park-2-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-alberto-giacometti.jpg
+- name: old-door-lock-old-door-lock-2-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-wols.jpg
+- name: old-door-lock-old-door-lock-2-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-brush.jpg
+- name: powerlines-power-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-mucha-mult.jpg
+- name: bluelake-blue-brush-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-brush-file-00-01-17-38.jpg
+- name: old-door-lock-old-door-lock-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-spagetti-accident.jpg
 - name: supreme-court-supremecourt-constitution.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-constitution.jpg
-- name: capital-battle-capitolbattle-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-alberto-giacometti.jpg
-- name: art-museum-art-museum-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-post-modern.jpg
-- name: death-valley-death-valley-national-park-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-blue-granite.jpg
-- name: mistywoods-babyfoot-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-spagetti-accident.jpg
-- name: capital-battle-capitolbattle-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-alien-goggles.jpg
-- name: stories-new-27-93-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-27-93-800-500-0-max-0--5--5.jpg
-- name: fence-fence-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-gan-vogh.jpg
-- name: oldcabin-store-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-space-pizza.jpg
-- name: aws-s3-stories-new-75-125-800-500-0-max-0-1-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-75-125-800-500-0-max-0-1-1.jpg
-- name: old-door-lock-old-door-lock-2-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-alberto-giacometti.jpg
-- name: status-berlin-status-berlin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin.jpg
-- name: amusement-park-amusement-park-2-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-colorful-blocks.jpg
-- name: yosemite-yosemite-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-nazi-poster.jpg
-- name: bluelake-colorful-dream-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-colorful-dream-file-00-00-38-67.jpg
-- name: miamibeach-miamibeach-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-purple-storm.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-umberto-bocc.jpg
-- name: yosemite-yosemite-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-neo-instinct.jpg
-- name: mediterranean-mediterranean-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-dry-skin.jpg
-- name: legal-statue-legalstatue-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-satan-red.jpg
-- name: flower-barbed-wire-flower-barbed-wire-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-circuit-3.jpg
-- name: walled-garden-walled-garden-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-dark-rain.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-attack-planes.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-attack-planes.JPG
-- name: power-lines-power-lines-empty-space-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-wols.jpg
-- name: 35562068104_fa20c57575-scream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-scream.jpg
-- name: dc-statue-dcstatue-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-emily-carr.jpg
-- name: blossombar-crafty-painting-file-00-00-50-52.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-52.jpg
-- name: bluelake-dark-soul-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dark-soul-file-00-01-17-38.jpg
-- name: stories-beach-rocks-currents-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-beach-rocks-currents-internet-numbers.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-emily-carr.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-emily-carr.JPG
-- name: downtown-old-empty-retail-uncle-sam.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-old-empty-retail-uncle-sam.jpg
-- name: old-granary-field-oldhouse-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-colorful-blocks.jpg
-- name: curtain-curtain-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-colorful-blocks.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-free-woman.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-free-woman.JPG
-- name: crow-crow-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-sand-paper.jpg
-- name: white-house-lawn-white-house-window-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-yellow-collage.jpg
-- name: old-building-clouds-with-tree-leaflets-of-the-russian-revolution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-building-clouds-with-tree-leaflets-of-the-russian-revolution.jpg
-- name: store-on-corner-store-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-yellow-collage.jpg
-- name: rockingchair-rockingchair.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair.jpg
-- name: paris-paris-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-ww2-dresden.jpg
-- name: supreme-court-supremecourt-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-hot-spicy.jpg
-- name: old-granary-field-granaryfield-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-light-dali.jpg
 ---
 Ellis To Take Over As Lady Wave Softball Coach.&nbsp;Vermillion Artist Envisions Prehistoric Creatures With Scrap Metal.&nbsp;The Future Or Extinction Of Our National Park System Is Upon Us.&nbsp;Timnaths Proposed Interim Oil And Gas Ordinance.&nbsp;Raiderettes Come Back Against Lady Tigers To Win Championship.&nbsp;La Feria Residents Continue To Spend Nights At Shelter.&nbsp;Two Men Die And Teen Blows Off Fingers In Fireworks Explosions.&nbsp;Park Rapids Makes Big Noise For Independence Day.&nbsp;
